force-app/main/default/objects/Planned_Task__c/Planned_Task__c.object-meta.xml
<CustomObject>
    <description>HRP-16123</description>
    <label>Planned Task</label>
    <nameField>
        <label>Planned Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>