force-app/main/default/objects/Planned_Task__c/fields/Calculated_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Creation_Date__c</fullName>
    <description>Calculates the exact date when a standard Task should be generated by the StandardTaskGenerationBatch. The formula subtracts the Creation_Offset__c from the related Opportunity&#39;s Drive_Date__c. It returns blank if either of those fields is null.</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(Related_Opportunity__r.Drive_Date__c)),
        NOT(ISBLANK(Creation_Offset__c))
    ),
    Related_Opportunity__r.Drive_Date__c - Creation_Offset__c,
    NULL
)</formula>
    <label>Calculated Creation Date</label>
    <type>Date</type>
</CustomField>