force-app/main/default/objects/Planned_Task__c/fields/Calculated_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Target_Date__c</fullName>
    <formula>CASE(Text( Scheduling_Method__c),
				&quot;Days Offset&quot;, (Related_Opportunity__r.Drive_Date__c - User_Defined_Offset__c),
				&quot;Target Date&quot;,Target_Date__c,
				NULL
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Target Date</label>
    <type>Date</type>
</CustomField>