force-app/main/default/objects/Planned_Task__c/fields/Creation_Offset__c.field-meta.xml
<CustomField>
    <fullName>Creation_Offset__c</fullName>
    <label>Creation Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>