force-app/main/default/objects/Planned_Task__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Planned Tasks</relationshipLabel>
    <relationshipName>Planned_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>