force-app/main/default/objects/Planned_Task__c/fields/Task_Definition__c.field-meta.xml
<CustomField>
    <fullName>Task_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Definition</label>
    <referenceTo>Task_Definition__c</referenceTo>
    <relationshipLabel>Planned Tasks</relationshipLabel>
    <relationshipName>Planned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>