force-app/main/default/objects/Planned_Task__c/fields/User_Defined_Offset__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Offset__c</fullName>
    <label>User Defined Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>